Overview fix icons, alignment and mobile view.

--- a/assets/styles/zume-course.css
+++ b/assets/styles/zume-course.css
@@ -438,11 +438,15 @@ dl, ol, ul {
 }
 
 #overview h3.vertical-padding {
-    max-width:800px;
+    /*max-width:800px;*/
     background: #323a68;
     color: white;
     padding: 5px;
     margin-top:100px;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
     text-align: center;
+}
+
+.overview {
+    margin-top:20px;
 }
